# BALE-project

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CITATION.cff  CITATION.md  DEPLOYMENT.md  Dockerfile  Dockerfile.api  Makefile  README.md  TECHNICAL_MANUAL.md  alembic.ini  app.py  docker-compose.prod.yml  docker-compose.yml  make_pdf.py  requirements.txt  run.sh  test_keys.py
api/: analytics.py  auth.py  cache.py  frontier_routes.py  jobs.py  main.py  nlq_routes.py  realtime.py  routes.py  schemas.py  v5_routes.py  webhooks.py
assets/: style.css
benchmarks/: BENCHMARK_REPORT_20260122_220220.md  BENCHMARK_REPORT_20260123_163036.md  benchmark_results_20260122_220220.json  benchmark_results_20260123_163036.json  benchmark_suite.py
database/: config.py  init.sql  models.py  repository.py
docs/: API.md  DEPLOYMENT.md
evaluation/: FINAL_REPORT.md  Scientific_Validation_Snapshot.md  benchmark_dataset.py  benchmark_dataset_v7.py  benchmark_results_v5.json  benchmark_results_v7.json  benchmark_v5.json  benchmark_v7.json  corpus_profile.json  evaluation_report.md  golden_eval_20260124_174252.json  golden_eval_20260124_174315.json  golden_eval_20260124_174810.json  golden_eval_20260124_175028.json  golden_eval_20260125_190727.json  golden_eval_20260125_191155.json  golden_eval_20260126_023238.json  golden_eval_20260126_023630.json  golden_test_set.json  results_20260116_175759.json  results_20260116_194113.json  results_soundness.md  results_stability.md  run_evaluation.py  run_golden_eval.py  (+15 more)
sdk/python/: __init__.py  bale_sdk.py  pyproject.toml
(+160 files in other folders)
